plang/testing/logs/false-incorrect/75/program75.p.p
sC :- l.

auOk N :- (vAo; cyp, p9aD MX rvRi e V8Mc; hb3 Ex; bL (E) d1c; w (b51b (fsyL9 (g lg (j9) E) GMze) WFVYZ (T8)); (g Am7L (ho) fJV (QL))); (((jY (OHU), eVI evTJ pMeC))).

g3av (l8CFA mWwrx uC (h08X7) vfgK) (Ch).

uIoUe (h (IEom) (Rr)).

hi (wGgGT qdJS).

gLjsn (a9qkb) (qMvg idZp) (R) UPXc.
bN Q0R (Z) awX o :- j vwJFm (UgEkA) (ybDM (H0AgR) (m sT (ideJ (dyWvw (X1mw) l Z8)) (hEj))) GHuFw; (lDJ; lR (c) (L1nc) (VwbYc)); (lyO (wp cK6In) Ja3k kUpZH (x4T (QEiv) u7QXF Yib (yr r8EvH)), t (oP (xp) (W5) (Efq) GdL)); ug3 (rGJ HqG gCI) SG1A (MU) (bY (V) (iln (brj (QcQgg) (R) (A)) (K6D))).


du T q DHAR.

zrLVO IC (vDA (Khhh3)) :- pYLR (C) (xRQ P5 cl3N (Ea2) (fOe aI0p (rdOhf (OT9v)) q Wvf)) (JKQCi).

uX2L.
j3ns XtH vm79 CPRaH.

eJ (fU6z) :- tXn6 SXX.

cdl7 Wi8 aO (hG pa) nN :- ((d8BF; yxs (gSmMf Gh) (f) Gz; (cfo (ot) (MtxjK)); qSd Nohw (ND1); zo8Id ba (EJ2E) whi; vbN fS (G) (mPQ) t3PWR)).

qS (qz7 RKcH (gkvS (Px)) DO0S) (Lul).

g alqr :- mJzk mXTNh (oP (KtZ) Yz (px G (xD Meq6 (y4Spz gt JDLQ) nDL) KsDoj)) k; (((arTPm n6R))); at9.
n9Hcj Z (qwXxY (w1 (V))) (B).


mQg H (g CsNi sCr) (nE3Hw E2ks).


rEOX iNo2.
zKA iTt jQih r :- p fqbGy O7rer vD dkJ7, dSX (WRbVj) (LKvmB); cz (ZIp) (V5Lg), q93I (CI4) (sTkp (kC SHj R1oBp (y P iZ))) (M) (m57x (gMx) p), fz1S Uuktp (Y), mLw3; qqI yMccA qLS; p (qK2f YCQWa (X2AtT) (mx)) Rtx J; joU4Q glrB2 S (yV dwGx AWqEw JYL9) X42.


? mlu3 Yms44 FGnpf wOe, f wuR; (szZ; hSWQB (iiF3w (N) (qGWC s (lYmuj (zh (iVCoy (m3D Xj2 (Y) sK pD80K) KxlhP (qUV Fe k1y) (NiMP)) iQeJ (NX) (W)) lsedB)) ZAdH) NOnSd; (h3VOH Ej (la (BzlE) (cA (fT (N) (qYV6h) (vb)) (AtxF) (pW) (wv3 HK6h7 Ttw4q (BL) l4C)) (rc31Z) (DEQ)) wR4l FuHOH)), (g (H) (C3r); (nMqj Mof P5NNV; ds)).